[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cta-bus"
version = "0.1.0"
description = "Unofficial Chicago Transit Authority SDK for the BusTime API."
authors = [
    { name = "Anton Grouchtchak", email = "anton.grouchtchak@gmail.com" },
]
maintainers = [
    { name = "Anton Grouchtchak", email = "anton.grouchtchak@gmail.com" },
]
requires-python = ">=3.9"
license = "GPLv3"
dependencies = [
    "httpx==0.24.1",
    "pendulum==2.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.0.289",
]

[tool.ruff]
select = [
    "ALL",

    # "TCH",  # flake8-type-checking
    # "B",    # flake8-bugbear
    # "F",    # Pyflakes
    # "N",    # pep8-naming
    # "W",    # pycodestyle warning
    # "E",    # pycodestyle error

    # Nursery (Not enabled by ALL selector):
    "E111", "E112", "E113", "E114", "E115", "E116", "E117",
    "E201", "E202", "E203",
    "E211",
    "E221", "E222", "E223", "E224", "E225", "E226", "E227", "E228",
    "E231",
    "E241", "E242",
    "E251", "E252",
    "E261", "E262", "E265", "E266",
    "E271", "E272", "E273", "E274", "E275",

    "RUF017",

    "PLC1901", "PLW1641", "PLW3201"
]

ignore = [
    "D1",       # undocumented-*
    "COM812",   # missing-trailing-comma
    "D203",     # one-blank-line-before-class (Incompatible with D211 no-blank-line-before-class)
    "D213",     # multi-line-summary-second-line (Incompatible with D212 multi-line-summary-first-line)
    "FBT",      # flake8-boolean-trap
    "ERA001",   # commented-out-code
    "TRY300",   # try-consider-else
    "TD",       # flake8-todos
    "FIX",      # flake8-fixme
]

unfixable = ["B", "UP", "C4", "SIM"]

format = "grouped"

pylint.max-args = 10

line-length = 120

target-version = "py39"

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "S101",      # assert
    "PLR2004",   # magic-value-comparison
    "SLF001",    # private-member-access
    "E501",      # line-too-long
]
